1999-07-20  Pascal Obry  <obry@gnat.com>

	* xe_utils.ads: add some comments.

1999-07-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stdcnf.adb, xe.ads, xe_back.adb: Add a new pragma Priority to
 	allow a user to enable priority propagation or not. This pragma is
 	just declared in the configuration language. Nothing is generated
 	yet.

	* xe_utils.adb: When -bargs and -largs are passed on the command
 	line, Scan_Make_Arg switches into Binder or Linker mode. It is not
 	possible to add glade internal compiler arguments. Fix this
 	bug. This bug was detected in several regression tests in which
 	-bargs -f (ask gnatbind to follow ada rules) is needed.

1999-07-01  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stdcnf.adb: Change Link_Name into External_Name for pragma
 	Import.

	* xe_check.adb: Update Get_File_Name usage. We do not have
	subunits.
	
1999-05-20  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Simulate --nolaunch on the command line when the
	starter is Shell or None. Fixes recent regressions.

1999-05-18  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb: Fix from Bart Nickerson for VMS (incorrect
	executable lookup).

1999-05-15  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_parse.adb: Main subprogram cannot be a child subprogram (fix
	6510-G02 or 6510-006). Check configuration name conflict (fix
	6510-G01 or 6510-005).

1999-05-06  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb, xe_back.adb: Resolve a visibility conflict.

1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Remove the GNATMAKE alias as it will be defined by
	configure.
	Replace ${} by $() so that it doesn't confuse automake any longer.

1999-04-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.adb, xe_back.ads, xe_check.adb, xe_stubs.adb,
	xe_utils.adb, xe_utils.adb: the previous check-in was taking a
	slightly un-synchronized version of the gnat sources.

1999-04-07  Laurent Pautet  <pautet@scapin.enst.fr>
